// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SidebarButton - Snapshots > matches snapshot with FileText icon 1`] = `
<button
  class="flex w-full cursor-pointer items-center justify-center gap-2 rounded-full border border-border bg-white/5 px-4 py-2 transition-colors hover:bg-white/10"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-file-text h-4 w-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
    />
    <path
      d="M14 2v5a1 1 0 0 0 1 1h5"
    />
    <path
      d="M10 9H8"
    />
    <path
      d="M16 13H8"
    />
    <path
      d="M16 17H8"
    />
  </svg>
  <span
    class="text-xs leading-normal font-bold text-[var(--base-foreground,#FFF)]"
  >
    Terms of service
  </span>
</button>
`;

exports[`SidebarButton - Snapshots > matches snapshot with LockKeyhole icon 1`] = `
<button
  class="flex w-full cursor-pointer items-center justify-center gap-2 rounded-full border border-border bg-white/5 px-4 py-2 transition-colors hover:bg-white/10"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-lock-keyhole h-4 w-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="16"
      r="1"
    />
    <rect
      height="12"
      rx="2"
      width="18"
      x="3"
      y="10"
    />
    <path
      d="M7 10V7a5 5 0 0 1 10 0v3"
    />
  </svg>
  <span
    class="text-xs leading-normal font-bold text-[var(--base-foreground,#FFF)]"
  >
    Privacy policy
  </span>
</button>
`;

exports[`SidebarButton - Snapshots > matches snapshot with Users icon 1`] = `
<button
  class="flex w-full cursor-pointer items-center justify-center gap-2 rounded-full border border-border bg-white/5 px-4 py-2 transition-colors hover:bg-white/10"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-users h-4 w-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
    />
    <path
      d="M16 3.128a4 4 0 0 1 0 7.744"
    />
    <path
      d="M22 21v-2a4 4 0 0 0-3-3.87"
    />
    <circle
      cx="9"
      cy="7"
      r="4"
    />
  </svg>
  <span
    class="text-xs leading-normal font-bold text-[var(--base-foreground,#FFF)]"
  >
    See all
  </span>
</button>
`;

exports[`SidebarButton - Snapshots > matches snapshot with additional props 1`] = `
<button
  aria-label="Test button"
  class="flex w-full cursor-pointer items-center justify-center gap-2 rounded-full border border-border bg-white/5 px-4 py-2 transition-colors hover:bg-white/10"
  data-testid="test"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-file-text h-4 w-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
    />
    <path
      d="M14 2v5a1 1 0 0 0 1 1h5"
    />
    <path
      d="M10 9H8"
    />
    <path
      d="M16 13H8"
    />
    <path
      d="M16 17H8"
    />
  </svg>
  <span
    class="text-xs leading-normal font-bold text-[var(--base-foreground,#FFF)]"
  >
    Test Button
  </span>
</button>
`;

exports[`SidebarButton - Snapshots > matches snapshot with complex children 1`] = `
<button
  class="flex w-full cursor-pointer items-center justify-center gap-2 rounded-full border border-border bg-white/5 px-4 py-2 transition-colors hover:bg-white/10"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-file-text h-4 w-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
    />
    <path
      d="M14 2v5a1 1 0 0 0 1 1h5"
    />
    <path
      d="M10 9H8"
    />
    <path
      d="M16 13H8"
    />
    <path
      d="M16 17H8"
    />
  </svg>
  <span
    class="text-xs leading-normal font-bold text-[var(--base-foreground,#FFF)]"
  >
    <span>
      Complex
    </span>
     
    <strong>
      Content
    </strong>
  </span>
</button>
`;

exports[`SidebarButton - Snapshots > matches snapshot with custom className 1`] = `
<button
  class="flex w-full cursor-pointer items-center justify-center gap-2 rounded-full border border-border bg-white/5 px-4 py-2 transition-colors hover:bg-white/10 custom-class"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-file-text h-4 w-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
    />
    <path
      d="M14 2v5a1 1 0 0 0 1 1h5"
    />
    <path
      d="M10 9H8"
    />
    <path
      d="M16 13H8"
    />
    <path
      d="M16 17H8"
    />
  </svg>
  <span
    class="text-xs leading-normal font-bold text-[var(--base-foreground,#FFF)]"
  >
    Custom Button
  </span>
</button>
`;
